--- a/src/message-queue/MainWindow.xaml
+++ b/src/message-queue/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="message_queue.MainWindow"
+        x:Name="MainWindowName"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -38,6 +39,6 @@
                 <TextBox Grid.Column="1" />
             </Grid>
         </StackPanel>
-        <Button Grid.Row="1" Command="{Binding CheckCommand}">Check</Button>
+        <Button Grid.Row="1" Command="{Binding CheckCommand}" CommandParameter="{Binding ElementName=MainWindowName}">Check</Button>
     </Grid>
 </Window>
