--- a/src/message-queue/MainWindow.xaml
+++ b/src/message-queue/MainWindow.xaml
@@ -28,7 +28,7 @@
                     <ColumnDefinition Width="2*" />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0">Streamer name</Label>
-                <TextBox Grid.Column="1" />
+                <TextBox Grid.Column="1" Text="{Binding Name}" />
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -36,7 +36,7 @@
                     <ColumnDefinition Width="2*" />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0">Emote name</Label>
-                <TextBox Grid.Column="1" />
+                <TextBox Grid.Column="1" Text="{Binding Emote}" />
             </Grid>
         </StackPanel>
         <Button Grid.Row="1" Command="{Binding CheckCommand}" CommandParameter="{Binding ElementName=MainWindowName}">Check</Button>
